⚡️ Enhance payband reset performance (#111)
* ⚡️ Enhance payband reset method performance

* ♻️ Refactor